# potagia

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  cargo-audit.toml  docker-compose.yml
.github/workflows/: ci.yml
.junie/: guidelines.md
config/: config.template.yaml
data/: aqui_se_come_bien.json  potagia.json
db/: potagia.json  rbac.json
devops/: docker-compose.yml
examples/aqui_se_come_bien/db/: aqui_se_come_bien.json
examples/aqui_se_come_bien/web/: index.html  script.js  styles.css
scripts/: import_files.rs  import_json.rs
specs/: potagia.md  potagia_es.md
src/: admin.rs  config.rs  config_utils.rs  content_service.rs  database.rs  ddl_utils.rs  json_to_db.rs  lib.rs  logging.rs  main.rs
static/: index.html
templates/: potagia_model.json  rbac_model.json
tests/: http_integration.rs
